# birlscript

./: CMakeLists.txt  ESPECIFICACAO.md  PrecompiledHeader.cmake  birlscript.sln
birlscript/: Action.cpp  BirlscriptException.cpp  Display.cpp  Display.h  Function.cpp  Global.cpp  Keywords.cpp  Keywords.h  Options.cpp  Options.h  Parser.cpp  Structure.cpp  birlscript.h  birlscript.vcxproj  birlscript.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
src/: main.cpp  stdafx.cpp  stdafx.h
testes/: fibonacci.birl
